# connected-sn

./: LICENSE  pyproject.toml
src/connected/: asgi.py  settings.py  urls.py  wsgi.py
src/pastes/: admin.py  forms.py  models.py  urls.py  views.py
src/pastes/migrations/: 0001_initial.py  0002_paste_like_dislike_comment_pasteview.py
src/static/css/: paste_list.css  paste_list.css.map  paste_list.scss  paste_post.css
src/templates/: base.html
src/templates/include/: navbar.html
src/templates/pastes/: paste_confirm_delete.html  paste_detail.html  paste_form.html  paste_list.html  paste_post.html  user_detail.html
